Fixes issue on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@ h2:hover {
   color:#34A3D8;
 }
 
+a:hover {
+  cursor: pointer;
+}
+
 h3 {
   font-size: 16pt;
   margin-right: 10vw;
@@ -111,7 +115,7 @@ section {
 .foot {
   position: static;
   bottom: 0px;
-  height: 8vh;
+  min-height: 8vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
